@@ -47,11 +47,12 @@ Fixes
     empty AtomGroup (Issue #2848)
   * Fixed the DMSParser, allowing the creation of multiple segids sharing
     residues with identical resids (Issue #1387, PR #2872)
-  * H5MD files are now pickleable with H5PYPicklable (Issue #2890, PR #2894)
+  * H5MD files are now picklable with H5PYPicklable (Issue #2890, PR #2894)
   * Fixed Janin analysis residue filtering (include CYSH) (Issue #2898)
   * libmdaxdr and libdcd classes in their last frame can now be pickled
     (Issue #2878, PR #2911)
-
+  * AtomGroup now are pickled/unpickled without looking for its anchored
+    Universe (PR #2893) 
 
 Enhancements
   * Refactored analysis.helanal into analysis.helix_analysis
